--- a/templates/parciais/head.html
+++ b/templates/parciais/head.html
@@ -1,5 +1,5 @@
 <head>
-	<title>Ceciliê Fornecedores</title>
+	<title>IPJA Questionário</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
