--- a/templates/sucesso.html
+++ b/templates/sucesso.html
@@ -19,7 +19,7 @@
 						Questionário IPJA
 					</span>
 
-					<div class="wrap-input100" >
+					<div class="wrap-input100 center" style="text-align: center;">
 						<h1>Agradecemos Sua Avaliação</h1>
 					</div>
 
