--- a/templates/itens-fornecedores.html
+++ b/templates/itens-fornecedores.html
@@ -81,7 +81,7 @@
  
           
           
-          <div class="wrap-login100 mobile">
+          <!-- <div class="wrap-login100 mobile">
             <p><span>Cadastrados até o Momento: <strong>-</strong></span></p>
             <p><span>Vendidos: <strong>-</strong></span></p>
             <p><span>Pago até Hoje: <strong>- </strong></span></p>
@@ -93,7 +93,7 @@
             <ul>
               -
             </ul>
-          </div>
+          </div> -->
 		</div>
     
 	</div>
