--- a/templates/parciais/detalhe_avaliacao.html
+++ b/templates/parciais/detalhe_avaliacao.html
@@ -29,7 +29,7 @@
             <span><strong>Louvor:</strong></span> {{ avaliacao.get_louvor_display }}
         </div>
         <div class="list-group-item">
-            <span><strong>Visitação:</strong></span> {{ avaliacao.get_visita_display }}
+            <span><strong>Visitação:</strong></span> {{ avaliacao.get_visitacao_display }}
         </div>
         <div class="list-group-item">
             <span><strong>Recepção:</strong></span> {{ avaliacao.get_recepcao_display }}
