--- a/templates/1.html
+++ b/templates/1.html
@@ -239,6 +239,7 @@
 							<br>
 							<span class="login100-form-title">
 								Quanto vc pode Contribuir em 2025?
+								<p> Apenas Valores de 1 a 5</p>
 							</span>
 
 							
