--- a/templates/1.html
+++ b/templates/1.html
@@ -238,7 +238,7 @@
 						<div class="wrap-input100">
 							<br>
 							<span class="login100-form-title">
-								Quanto vc pode Contribuir em 2025?
+								Quanto você pode Contribuir em 2025?
 								<p> Apenas Valores de 1 a 5</p>
 							</span>
 
