--- a/templates/itens-fornecedores.html
+++ b/templates/itens-fornecedores.html
@@ -24,6 +24,7 @@
                   {% for dizimo in dizimos %}
                     <span>Previsão Dízimo:<strong><span class="badge bg-success">{{dizimo}}</span></strong></span><br>
                   {% endfor %}
+                  <span>Quantos Preencheram:<strong><span class="badge bg-warning"> 10</span></strong></span><br>
                 <span><strong>{{request.user.username}}</strong><br>
                 
                 
@@ -72,6 +73,8 @@
               {% for dizimo in dizimos %}
                 <span>Previsão Dízimo:<strong><span class="badge bg-success">{{dizimo}}</span></strong></span><br>
               {% endfor %}
+              <span>Quantos Preencheram:<strong><span class="badge bg-warning"> {{total_avlc}}</span></strong></span><br>
+
             <span><strong>Usuario: {{request.user.username}}</strong><br>
             </div>
             {%for av in avaliacoes%}
