--- a/templates/1.html
+++ b/templates/1.html
@@ -239,7 +239,8 @@
 							<br>
 							<span class="login100-form-title">
 								Quanto você pode Contribuir em 2025?
-								<p> Apenas Valores de 1 (MAIOR PRIORIDADE) a 5 (MENOR PRIORIDADE)</p>
+								<p> Apenas Valores de <strong>1 (MAIOR PRIORIDADE) a 5 (MENOR PRIORIDADE)</strong></p><br>
+								<p> Escolha até <strong>5 Opções.</strong></p>
 							</span>
 							
 							<label for=""><strong>Comunicação</strong></label>
